fix(ui): provide temoprary solution for layout issues of kitchen sink content

--- a/packages/ui/src/components/kitchen-sink/_kitchenSink.scss
+++ b/packages/ui/src/components/kitchen-sink/_kitchenSink.scss
@@ -3,3 +3,11 @@
   height: 100%;
   background: rgba(0, 0, 0, .7);
 }
+
+/* TODO should fix in player and remove */
+:global(.playkit-side-panel-content) {
+  & > div {
+    width: 100%;
+    height: 100%;
+  }
+}
